--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
-    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
+    <link rel="icon" type="image/svg" href="../src/images/musicbox-mark-purple.svg" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -23,9 +23,13 @@
     <style>
       /* TODO: figure out a better way to import this font */
       @import url('https://rsms.me/inter/inter.css');
-      html { font-family: 'Inter', sans-serif; }
+      html {
+        font-family: 'Inter', sans-serif;
+      }
       @supports (font-variation-settings: normal) {
-        html { font-family: 'Inter var', sans-serif; }
+        html {
+          font-family: 'Inter var', sans-serif;
+        }
       }
     </style>
   </head>
